--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
     "lucide-react": "^0.556.0",
+    "mailparser": "^3.9.0",
     "multer": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
