--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
+    "dompurify": "^3.3.1",
+    "isomorphic-dompurify": "^2.34.0",
     "lucide-react": "^0.556.0",
     "mailparser": "^3.9.0",
     "multer": "^2.0.2",
